--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "author": "Alejo Mendoza <alejandro@skyhitzmusic.com>",
   "license": "MIT",
   "devDependencies": {
+    "@borderless/parse-authorization": "^1.0.0",
     "@cloudflare/workers-types": "^2.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/is-odd": "^3.0.0",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.172",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^26.6.3",
+    "lodash": "^4.17.21",
     "prettier": "^1.19.1",
     "rollup": "^2.36.1",
     "rollup-plugin-copy": "^3.3.0",
