--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,19 +1,16 @@
 name = "wrangler-scf-voting"
-# type = "javascript" is required to use the `[build]` section
-type = "javascript"
-account_id = "8d06a01e958a084add5fcf155430e0fa"
-workers_dev = true
-route = ""
-zone_id = ""
-
-[build]
-command = "npm install && npm test && npm run build"
-[build.upload]
-# The "modules" upload format is required for all projects that export a Durable Objects class
-format = "modules"
-main = "./index.mjs"
+main = "src/index.ts"
+compatibility_date = "2022-06-05"
 
 [durable_objects]
 bindings = [
   { name = "FUND", class_name = "Fund" } 
 ]
+
+[[migrations]]
+tag = "v1"
+new_classes = ["Fund"]
+
+# [secrets]
+# BOT_TOKEN
+# WEBFLOW_API_KEY
