--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "devDependencies": {
     "@borderless/parse-authorization": "^1.0.0",
     "@cloudflare/workers-types": "^3.11.0",
+    "@types/papaparse": "^5.3.2",
     "prettier": "^1.19.1",
     "typescript": "^4.2.4",
     "wrangler": "^2.0.7"
   },
   "dependencies": {
-    "cfw-easy-utils": "^1.0.2"
+    "cfw-easy-utils": "^1.0.2",
+    "papaparse": "^5.3.2"
   }
 }
