--- a/package.json
+++ b/package.json
@@ -2,36 +2,22 @@
   "private": true,
   "name": "wrangler-scf-voting",
   "version": "1.0.0",
-  "description": "A template for kick starting a Cloudflare Workers project",
-  "module": "./dist/index.mjs",
   "scripts": {
-    "build": "rollup -c",
-    "test": "jest",
-    "format": "prettier --write '**/*.{js,css,json,md}'"
+    "start": "wrangler dev",
+    "publish": "wrangler publish",
+    "publish-prod": "wrangler publish --env prod"
   },
   "author": "Alejo Mendoza <alejandro@skyhitzmusic.com>",
-  "license": "MIT",
   "devDependencies": {
     "@borderless/parse-authorization": "^1.0.0",
-    "@cloudflare/workers-types": "^2.2.2",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@types/is-odd": "^3.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/lodash": "^4.14.172",
-    "isomorphic-fetch": "^3.0.0",
-    "jest": "^26.6.3",
-    "lodash": "^4.17.21",
+    "@cloudflare/workers-types": "^3.11.0",
+    "@types/papaparse": "^5.3.2",
     "prettier": "^1.19.1",
-    "rollup": "^2.36.1",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^26.5.6",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "wrangler": "^2.0.7"
   },
   "dependencies": {
-    "cfw-easy-utils": "^1.0.2"
+    "cfw-easy-utils": "^1.0.2",
+    "papaparse": "^5.3.2"
   }
 }
